Change db structure; Now participation and stream type are counted in a seperate table.

--- a/vtbarchiver/templates/home/index.html
+++ b/vtbarchiver/templates/home/index.html
@@ -6,5 +6,5 @@
 
 {% block content %}
     Yet another VTuber archiver. 
-    <p><img src="{{ url_for('static', filename='Pictures/20220101_02.jpg') }}" alt="demo" style="width: 50%;" /></p>
+    <p><img src="{{ url_for('static', filename='pictures/20220101_02.jpg') }}" alt="demo" style="width: 50%;" /></p>
 {% endblock %}
