--- a/vtbarchiver/static/style.css
+++ b/vtbarchiver/static/style.css
@@ -1,25 +1,47 @@
-.modal {
-    display: none; 
-    position: fixed;
-    left: 0;
-    top: 0; 
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.4);
-    z-index: 9999;
+.side-bar-items {
+    margin-top: 0.5em;
+    margin-bottom: 0.5em;
 }
 
-.modal:target {
-    display: block;
+.pagination>li>a {
+    color: #242424
 }
 
-.modal-dialog {
-    vertical-align: middle;
-    background-color: azure;
-    margin: 30% auto;
+.pagination>li>a:hover {
+    color: #242424
 }
 
-.close-button {
-    float: right;
-    text-decoration: none;
+.pagination>.page-item.active>a {
+    background-color: #e0e0e0;
+    color: #242424;
+    border-color: #e0e0e0;
+}
+
+.player-title {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+tags.customized-tag-field {
+    border: none;
+}
+
+.customized-tag-field .tagify__input{
+    display: none;
+  }
+
+.read-only-tags {
+    --readonly-striped: 0;
+    --tags-bg: #FCFAF2;
+
+    display: inline-block;
+}
+
+.talent-badge {
+    padding: 0.1em 0.5em;
+    border-style: solid;
+    border-radius: 0.5em;
+    border-width: 1px;
+    border-color: #4F4F48;
 }
