--- a/vtbarchiver/templates/base.html
+++ b/vtbarchiver/templates/base.html
@@ -2,35 +2,77 @@
 <html>
     <head>
         <title>{% block title %}{% endblock %} - vtbarchiver</title>
+        <meta charset="utf-8">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        <link href="https://unpkg.com/@yaireo/tagify/dist/tagify.css" rel="stylesheet" type="text/css" />
         <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}" />
+        <link rel="stylesheet" href="https://at.alicdn.com/t/font_2511755_har9gb6h5f.css" />
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+        <script src="{{ url_for('static', filename='scripts/videos.js') }}"></script>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
 
     <body>
-        <h1>VTuber Archiver</h1>
-        <hr />
-        <nav>
-            <table>
-                <tr>
-                    <th><a href="{{ url_for('home.index') }}">Home</a></th>
-                    <th><a href="{{ url_for('channels.channels') }}">Channels</a></th>
-                    <th><a href="{{ url_for('videos.videos') }}">Videos</a></th>
-                    {% if g.user %}
-                        <th><a href="{{ url_for('management.settings') }}">Settings</a></th>
-                        <th><a href="{{ url_for('management.logout') }}">Logout</a></th>
-                    {% endif %}
-                </tr>
-            </table>
-        </nav>
+    
+    <nav class="navbar navbar-expand-sm fixed-top" style="background-color: #e8e8e8;">
+        <div class="container-fluid">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link text-dark" href="#side-bar-nav" style="font-size: 1.2em;" data-bs-toggle="offcanvas"><i class="iconfont icon-nav-list"></i></a>
+                </li>
+                
+                <li class="nav-item text-dark">
+                    <a class="nav-link text-dark" style="font-weight: bold; font-size: 1.2em;" href="{{ url_for('home.index') }}">VArchiver</a>
+                </li>
+            </ul>
+            {% if g.user %}
+                <ul class="navbar-nav me-0">
+                    <li class="nav-item text-dark">
+                        <a class="nav-link text-dark border-start ps-3" href="{{ url_for('management.logout') }}">Logout</a>
+                    </li>
+                </ul>
+            {% endif %}
+        </div>
+    </nav>
 
-        <hr />
-        
-        <section>
-            <h2>{% block header %}{% endblock %}</h2>
-            {% for message in get_flashed_messages() %}
-                <div>{{ message }}</div>
-            {% endfor %}
+    <div class="offcanvas offcanvas-start" id="side-bar-nav" style="max-width: 15em;">
+        <div class="offcanvas-header">
+            <h4 class="my-auto" style="font-weight: bold">VArchiver</h4>
+            <button type="button" class="btn-close text-rest" data-bs-dismiss="offcanvas"></button>
+        </div>
+        <div class="offcanvas-body">
+            <div class="list-group">
+                <a href="{{ url_for('channels.channels') }}" class="list-group-item list-group-item-action border-0 side-bar-items">Channels</a>
+                <a href="{{ url_for('videos.videos') }}" class="list-group-item list-group-item-action border-0 side-bar-items">Videos</a>
+                {% if g.user %}
+                    <a href="{{ url_for('management.settings') }}" class="list-group-item list-group-item-action border-0 side-bar-items">Settings</a>
+                {% endif %}
+            </div>
+        </div>
+    </div>
 
-            {% block content %}{% endblock %}
-        </section>
+
+    <div class="container" style="padding-top: 4.5em">
+        <div class="row">
+            <div class="col-sm-2"></div>
+            <div class="col-sm-8"> 
+                <section>
+                   {% block header %}{% endblock %}
+
+                    {% for message in get_flashed_messages() %}
+                        <div class="alert alert-info">
+                            <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+                            {{ message }}
+                        </div>
+                    {% endfor %}
+
+                    {% block content %}{% endblock %}
+                </section>
+            </div>
+            <div class="col-sm-2"></div>
+        </div>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    </div>
     </body>
 </html>
+
