--- a/vtbarchiver/templates/channels/single_channel.html
+++ b/vtbarchiver/templates/channels/single_channel.html
@@ -1,110 +1,168 @@
 {% extends 'base.html' %}
 
-{% block header %}{% block title %}{{ channel_info['channel_name'] }}{% endblock %}{% endblock %}
+{% block header %}<h2>{% block title %}Channel Information{% endblock %}</h2>{% endblock %}
 
 {% block content %}
-    <table>
-        <tr>
-            <td>
-                <img src="{{ channel_info['thumb_url'] }}" style="height: 6em;" alt="Thumb" />
-            </td>
-            <td>
-                <p>Talent name: {{ channel_info['talent_name'] }}
-                    {% if g.user %}
-                        - <a href="#edit-talent-dialog">Edit</a>
-                        - <a href="{{ url_for('channels.add_talent_name', channel_id=channel_info['channel_id']) }}">Auto add name</a>
-                    {% endif %}
-                </p>
-                <p>YouTube: <a href="https://youtube.com/channel/{{ channel_info['channel_id'] }}" target="_blank">{{ channel_info['channel_name'] }}</a></p>
-                {% if g.user %}
-                    <p>Download checkpoint: {{ channel_info['checkpoint_idx'] }} - <a href="#edit-checkpoint-dialog">Edit</a></p>
-                {% endif %}
-            </td>
-        </tr>
-    </table>
+<div class="row">
+    <div class="col-sm-1"></div>
 
-    <table>
-        {% for single_video in videos_on_page %}
-            <tr>
-                <td>
-                    <img src="{{ single_video['thumb_url'] }}" style="height: 6em;" alt="Thumb" />
-                </td>
-                <td>
-                    <p><a href="{{ url_for('videos.single_video', video_id=single_video['video_id']) }}">{{ single_video['title'] }}</a></p>
-                    <p>{{ single_video['upload_date'] }}</p>
-                    <p>
-                        {% if single_video['local_id'] %}
-                            Archived
-                        {% else %}
-                            Not archived
-                        {% endif %}
-                    </p>
-                </td>
-            </tr>
-        {% endfor %}
-    </table>
+    <div class="col-sm-10">
 
-    <table>
-        <tr>
-            {% for i in range(page_num) %}
-                <td>
-                    <a href="{{ url_for('channels.single_channel', channel_id=channel_info['channel_id'], page=i+1) }}">{{ i+1 }}</a>
-                </td>
-            {% endfor %}
-        </tr>
-    </table>
-
-
-    {% if g.user %}
-        <!-- Modal for editing checkpoint -->
-        <div class="modal" id="edit-checkpoint-dialog">
-            <div class="modal-dialog">
-                <p class="close-button"><a href="#">[x]</a></p>
-                <div>
-                    {% for message in get_flashed_messages() %}
-                        <p>{{ message }}</p>
-                    {% endfor %}
+        
+        <div class="bg-light shadow mx-auto mt-4">
+            <div class="row mx-0">
+                <div class="col-sm-4 border-end my-4">
+                    <div class="d-flex" style="height: 100%;">
+                        <div style="text-align: center; margin: auto;" class="align-self-center">
+                            <img src="{{ channel_info['thumb_url'] }}" class="rounded-circle" style="width: 60%;" alt="Thumb" />
+                            <div class="mt-3">{{ channel_info['talent_name'] }}</div>
+                        </div>
+                    </div>
                 </div>
-                <form method="post" action="{{ url_for('channels.edit_checkpoint', channel_id=channel_info['channel_id']) }}">
-                    <table>
-                        <tr>
-                            <td><label for="checkpoint_idx">New upload index: </label></td>
-                            <td><input id="checkpoint_idx" type="number" name="checkpoint_idx" /></td>
-                        </tr>
-                        <tr>
-                            <td><label for="video_id">New video ID: </label></td>
-                            <td><input id="video_id" type="text" name="video_id" /></td>
-                        </tr>
-                        <tr>
-                            <td><label for="offset">Offset: </label></td>
-                            <td><input id="offset" name="offset" type="number" /></td>
-                        </tr>
-                    </table>
-                    <input type="submit" value="Apply" />
-                </form>
+                <div class="col-sm-8">
+                    <div class="d-flex px-2" style="height: 100%;">
+                        <div class="align-self-center">
+                            <div class="my-2">YouTube: <a href="https://youtube.com/channel/{{ channel_info['channel_id'] }}" target="_blank" class="text-secondary" style="text-decoration: underline dotted;">{{ channel_info['channel_name'] }}</a></div>
+                            <div class="my-2">Number of videos: {{ video_num }}</div>
+                            {% if g.user %}
+                                <div class="my-2">Download checkpoint: {{ channel_info['checkpoint_idx'] }}</div>
+                            {% endif %}
+                        </div>
+                        {% if g.user %}
+                            <div class="align-self-start flex-grow-1" style="text-align: right;">
+                                <a data-bs-toggle="modal" data-bs-target="#channel-setting-modal" href="#channel-setting-modal" style="text-decoration: none;"><i class="iconfont icon-set text-secondary" style="font-size: 1.5em;"></i></a>
+                            </div>
+                        {% endif %}
+                    </div>
+                </div>
             </div>
         </div>
+        
+        <div class="mt-5">
+            {% for single_video in videos_on_page %}
+                <div class="bg-light shadow-sm mx-auto my-2 border rounded-2" onclick="location.assign('{{ url_for('videos.single_video', video_id=single_video['video_id']) }}')" style="cursor: pointer;">
+                    <div class="row mx-0">
+                        <div class="col-sm-3 border-end px-0">
+                            <div class="mx-auto d-flex" style="text-align: center; align-items: center; height: 100%;">
+                                <img src="{{ single_video['thumb_url'] }}" style="width: 100%; display: block;" alt="Thumb" class="border-0 rounded-2"/>
+                            </div>
+                        </div>
+                        <div class="col-sm-9">
+                            <div class="d-flex px-2" style="height: 100%;">
+                                <div class="align-self-center pe-2">
+                                    <div class="my-2">{{ single_video['title'] }}</div>
+                                    <div class="my-2 video-upload-date text-secondary" style="font-size: 0.9em;">{{ single_video['upload_date'] }}</div>
+                                    <div class="my-2 text-secondary" style="font-size: 0.9em;">
+                                        {% if single_video['local_id'] %}
+                                            Archived
+                                        {% else %}
+                                            Not archived
+                                        {% endif %}
+                                    </div>
+                                </div>
+                                <div class="align-self-start flex-grow-1" style="text-align: right;">
+                                    <span class="text-secondary" style="font-size: 0.8em;">{{ single_video['upload_idx'] }}</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            {% endfor %}
+        </div>
+        
+        <ul class="pagination justify-content-center mt-5">
+            <li class="page-item"><a class="page-link" href="{{ url_for('channels.single_channel', channel_id=channel_info['channel_id'], page=1) }}">First</a></li>
+            {% if current_page > 1 %}
+                <li class="page-item"><a class="page-link" href="{{ url_for('channels.single_channel', channel_id=channel_info['channel_id'], page=current_page-1) }}">Prev</a></li>
+            {% else %}
+                <li class="page-item disabled"><a class="page-link" href="#">Prev</a></li>
+            {% endif %}
+
+            {% for i in pagination_list %}
+                <li id="page-tag-{{ i }}" class="page-item"><a class="page-link" href="{{ url_for('channels.single_channel', channel_id=channel_info['channel_id'], page=i) }}">{{ i }}</a></li>
+            {% endfor %}
+
+            {% if current_page != page_num %}
+                <li class="page-item"><a class="page-link" href="{{ url_for('channels.single_channel', channel_id=channel_info['channel_id'], page=current_page+1) }}">Next</a></li>
+            {% else %}
+                <li class="page-item disabled"><a class="page-link" href="#">Next</a></l>
+            {% endif %}
+                
+            <li class="page-item"><a class="page-link" href="{{ url_for('channels.single_channel', channel_id=channel_info['channel_id'], page=page_num) }}">Last</a></li>
+        </ul>
+
+    </div>
 
 
-        <!-- edit talent name -->
-        <div class="modal" id="edit-talent-dialog">
-            <div class="modal-dialog">
-                <p class="close-button"><a href="#">[x]</a></p>
+    <div class="col-sm-1"></div>
+
+</div>
+
+{% if g.user %}
+<!-- Settings modal box-->
+<div class="modal fade" id="channel-setting-modal">
+    <div class="modal-dialog">
+        <div class="modal-content">
+
+            <div class="modal-header">
+                <h4 class="modal-title">Update Channel</h4>
+                <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+            </div>
+
+            <div class="modal-body">
                 <div>
                     {% for message in get_flashed_messages() %}
-                        <p>{{ message }}</p>
+                        <div class="alert alert-info">
+                            <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+                            {{ message }}
+                        </div>
                     {% endfor %}
                 </div>
-                <form method="post" action="{{ url_for('channels.edit_talent', channel_id=channel_info['channel_id']) }}">
-                    <table>
-                        <tr>
-                            <td><label for="talent_name">New talent name: </label></td>
-                            <td><input id="talent_name" type="text" name="talent_name" /></td>
-                        </tr>
-                    </table>
-                    <input type="submit" value="Apply" />
-                </form>
+
+                <div class="mx-5 pb-3 border-bottom">
+                    <form method="post" action="{{ url_for('channels.edit_checkpoint', channel_id=channel_info['channel_id']) }}">
+                        <div class="mb-3 mt-3">
+                            <label for="checkpoint_idx" class="form-label">New upload index: </label>
+                            <input class="form-control" id="checkpoint_idx" type="number" name="checkpoint_idx" />
+                        </div>
+                        <div class="mb-3">
+                            <label for="video_id" class="form-label">New video ID: </label>
+                            <input class="form-control" id="video_id" type="text" name="video_id" />
+                        </div>
+                        <div class="mb-3">
+                            <label for="offset" class="form-label">Offset: </label>
+                            <input class="form-control" id="offset" name="offset" type="number" />
+                        </div>
+                        <div style="text-align: right;">
+                            <button type="submit" class="btn btn-success">Apply</button>
+                        </div>
+                    </form>
+                </div>
+
+                <div class="mx-5 pb-3">
+                    <form method="post" action="{{ url_for('channels.edit_talent', channel_id=channel_info['channel_id']) }}">
+                        <div class="mb-3 mt-3">
+                            <label for="talent_name" class="form-label">New talent name: </label>
+                            <input class="form-control" id="talent_name" type="text" name="talent_name" />
+                        </div>
+                        <div style="text-align: right;">
+                            <button type="button" class="btn btn-success me-2" onclick="location.assign('{{ url_for('channels.add_talent_name', channel_id=channel_info['channel_id']) }}')">Auto add talent</button>
+                            <button type="submit" class="btn btn-success">Apply</button>
+                        </div>
+                    </form>
+                </div>
             </div>
-        </div>    
-    {% endif %}
-{% endblock %}
+
+            <div class="modal-footer">
+                <button type="button" class="btn btn-warning" data-bs-dismiss="modal">Cancel</button>
+            </div>
+
+        </div>
+    </div>
+</div>
+{% endif %}
+
+<script>format_upload_date()</script>
+<script>set_page_active({{ current_page }})</script>
+
+{% endblock %} 
