--- a/vtbarchiver/templates/management/login.html
+++ b/vtbarchiver/templates/management/login.html
@@ -1,13 +1,23 @@
 {% extends 'base.html' %}
 
-{% block header %}{% block title %}Login{% endblock %}{% endblock %}
+{% block header %}
+        <h2>{% block title %}Login{% endblock %}</h2>
+{% endblock %}
 
 {% block content %}
-    <form method="post">
-        <label for="username">Username</label><br />
-        <input id="username" name="username" required /><br />
-        <label for="password">Password</label><br />
-        <input id="password" name="password" type="password" required /><br />
-        <input type="submit" value="Login" /><br />
-    </form>
+
+        <form method="post">
+            <div class="my-3">
+                <label for="username" class="form-label">Username</label>
+                <input id="username" name="username" class="form-control" placeholder="Username" required />
+            </div>
+            <div class="mb-3"><label for="password" class="form-label">Password</label>
+                <input id="password" name="password" type="password" placeholder="Password" class="form-control" required />
+            </div>
+            <button type="submit" value="Login" class="btn btn-success">Login</button>
+        </form>
+    </div>
+    <div class="col-sm-2"></div>
+</div>
+
 {% endblock %}
