--- a/vtbarchiver/static/style.css
+++ b/vtbarchiver/static/style.css
@@ -40,8 +40,29 @@ tags.customized-tag-field {
 
 .talent-badge {
     padding: 0.1em 0.5em;
+    background-color: #f7f7f7;
     border-style: solid;
     border-radius: 0.5em;
     border-width: 1px;
     border-color: #4F4F48;
+    display: inline-block;
+}
+
+.talent-badge:hover {
+    background-color: #ededed;
+}
+
+.add-badge :hover {
+    color: #3A8FB7;
+}
+
+.duration-stamp {
+    position: absolute;
+    right: 0%;
+    bottom: 0%;
+    z-index: 99;
+    padding: 0.2em;
+    background-color: rgba(0, 0, 0, 0.3);
+    color: rgba(255, 255, 255, 0.8);
+    font-size: 0.9em;
 }
