--- a/vtbarchiver/templates/base.html
+++ b/vtbarchiver/templates/base.html
@@ -6,9 +6,9 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <link href="https://unpkg.com/@yaireo/tagify/dist/tagify.css" rel="stylesheet" type="text/css" />
         <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}" />
-        <link rel="stylesheet" href="https://at.alicdn.com/t/font_2511755_har9gb6h5f.css" />
+        <link rel="stylesheet" href="https://at.alicdn.com/t/font_2511755_huz39bcog79.css" />
         <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-        <script src="{{ url_for('static', filename='scripts/videos.js') }}"></script>
+        <script src="{{ url_for('static', filename='scripts/misc.js') }}"></script>
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
 
