--- a/vtbarchiver/templates/channels/single_channel.html
+++ b/vtbarchiver/templates/channels/single_channel.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block header %}<h2>{% block title %}Channel Information{% endblock %}</h2>{% endblock %}
+{% block title %}{{ channel_info['channel_name'] }}{% endblock %}
 
 {% block content %}
 <div class="row">
@@ -15,17 +15,16 @@
                     <div class="d-flex" style="height: 100%;">
                         <div style="text-align: center; margin: auto;" class="align-self-center">
                             <img src="{{ channel_info['thumb_url'] }}" class="rounded-circle" style="width: 60%;" alt="Thumb" />
-                            <div class="mt-3">{{ channel_info['talent_name'] }}</div>
                         </div>
                     </div>
                 </div>
                 <div class="col-sm-8">
                     <div class="d-flex px-2" style="height: 100%;">
                         <div class="align-self-center">
-                            <div class="my-2">YouTube: <a href="https://youtube.com/channel/{{ channel_info['channel_id'] }}" target="_blank" class="text-secondary" style="text-decoration: underline dotted;">{{ channel_info['channel_name'] }}</a></div>
-                            <div class="my-2">Number of videos: {{ video_num }}</div>
+                            <div class="my-2"><a href="https://youtube.com/channel/{{ channel_info['channel_id'] }}" target="_blank" class="text-dark" style="text-decoration: none;"><h2>{{ channel_info['channel_name'] }}</h2></a></div>
+                            <div class="my-2 text-secondary">Number of videos: {{ video_num }}</div>
                             {% if g.user %}
-                                <div class="my-2">Download checkpoint: {{ channel_info['checkpoint_idx'] }}</div>
+                                <div class="my-2 text-secondary">Download checkpoint: {{ channel_info['checkpoint_idx'] }}</div>
                             {% endif %}
                         </div>
                         {% if g.user %}
@@ -51,17 +50,14 @@
                             <div class="d-flex px-2" style="height: 100%;">
                                 <div class="align-self-center pe-2">
                                     <div class="my-2">{{ single_video['title'] }}</div>
-                                    <div class="my-2 video-upload-date text-secondary" style="font-size: 0.9em;">{{ single_video['upload_date'] }}</div>
-                                    <div class="my-2 text-secondary" style="font-size: 0.9em;">
-                                        {% if single_video['local_id'] %}
-                                            Archived
-                                        {% else %}
-                                            Not archived
-                                        {% endif %}
-                                    </div>
+                                    <div class="my-2 text-secondary video-upload-date" style="font-size: 0.9em;">{{ single_video['upload_date'] }}</div>
+                                    <div class="my-2 text-secondary video-duration" style="font-size: 0.9em;">{{ single_video['duration'] }}</div>
                                 </div>
                                 <div class="align-self-start flex-grow-1" style="text-align: right;">
-                                    <span class="text-secondary" style="font-size: 0.8em;">{{ single_video['upload_idx'] }}</span>
+                                    <span class="text-secondary" style="font-size: 0.8em;">{{ single_video['upload_idx'] }}</span><br />
+                                    {% if single_video['local_id'] %}
+                                        <span><i class="iconfont icon-archive text-success"></i></span>
+                                    {% endif %}
                                 </div>
                             </div>
                         </div>
@@ -162,7 +158,7 @@
 </div>
 {% endif %}
 
-<script>format_upload_date()</script>
 <script>set_page_active({{ current_page }})</script>
+<script src="{{ url_for('static', filename='scripts/single_channel.js') }}"></script>
 
 {% endblock %} 
