--- a/vtbarchiver/templates/channels/single_channel.html
+++ b/vtbarchiver/templates/channels/single_channel.html
@@ -150,6 +150,7 @@
             </div>
 
             <div class="modal-footer">
+                <button type="button" class="btn btn-danger" id="delete-channel-btn">Delete Channel</button>
                 <button type="button" class="btn btn-warning" data-bs-dismiss="modal">Cancel</button>
             </div>
 
@@ -160,5 +161,13 @@
 
 <script>set_page_active({{ current_page }})</script>
 <script src="{{ url_for('static', filename='scripts/single_channel.js') }}"></script>
+<script>
+    let delete_channel_btn = $('#delete-channel-btn');
+    delete_channel_btn.on('click', function () {
+        if (confirm('Are you sure you want to delete this channel? ')) {
+        location.assign('{{ url_for("channels.delete_channel", channel_id=channel_info["channel_id"]) }}')
+    }
+});
+</script>
 
 {% endblock %} 
