--- a/vtbarchiver/templates/management/settings.html
+++ b/vtbarchiver/templates/management/settings.html
@@ -1,46 +1,75 @@
 {% extends 'base.html' %}
 
-{% block header %}{% block title %}Settings{% endblock %}{% endblock %}
+{% block title %}Settings{% endblock %}
 
 {% block content %}
-    <form method="post">
-        <table>
-            <tr>
-                <td>Slow Mode: </td>
-                <td>{{ dl_configs['slow_mode'] }}</td>
-                <td><input id='slow_mode' name="slow_mode" value="{{ request.form['slow_mode'] or dl_configs['slow_mode'] }}"></td>
-            </tr>
-            <tr>
-                <td>Sleep time: </td>
-                <td>{{ dl_configs['sleep_time'] }}</td>
-                <td><input id='sleep_time' name="sleep_time" value="{{ request.form['sleep_time'] or dl_configs['sleep_time'] }}"></td>
-            </tr>
-            <tr>
-                <td>Cookie path: </td>
-                <td>{{ dl_configs['cookie_path'] }}</td>
-                <td><input id='cookie_path' name="cookie_path" value="{{ request.form['cookie_path'] or dl_configs['cookie_path'] }}"></td>
-            </tr>
-            <tr>
-                <td>Download path: </td>
-                <td>{{ dl_configs['download_path'] }}</td>
-                <td><input id='download_path' name="download_path" value="{{ request.form['download_path'] or dl_configs['download_path'] }}"></td>
-            </tr>
-            <tr>
-                <td>Local videos: </td>
-                <td>{{ dl_configs['local_videos'] }}</td>
-                <td><input id='local_videos' name="local_videos" value="{{ request.form['download_path'] or dl_configs['download_path'] }}"></td>
-            </tr>
-        </table>
-    <input type="submit" value="Apply">
-    </form>
+<div class="row">
+    <div class="col-sm-1"></div>
 
-    <p><a href="{{ url_for('management.scan_local') }}">Scan local files</a></p>
+    <div class="col-sm-10">
+        <h2>Settings</h2>
+        <form method="post">
+            <div class="row mt-2">
+                <div class="col-sm-3 d-flex"><label for="slow-mode" class="form-label align-self-center">Slow mode: </label></div>
+                <div class="col-sm-9">
+                    <select class="form-select" id="slow-mode" name="slow_mode" value="{{ request.form['slow_mode'] or dl_configs['slow_mode'] }}">
+                        <option value="True">True</option>
+                        <option value="False">False</option>
+                    </select>
+                </div>
+            </div>
+            <div class="row mt-2">
+                <div class="col-sm-3 d-flex"><label for="sleep-time" class="form-label align-self-center">Sleep time: </label></div>
+                <div class="col-sm-9"><input id="sleep-time" name="sleep_time" type="number" value="{{ request.form['sleep_time'] or dl_configs['sleep_time'] }}" class="form-control" /></div>
+            </div>
+            <div class="row mt-2">
+                <div class="col-sm-3 d-flex"><label for="cookie-path" class="form-label align-self-center">Cookie path: </label></div>
+                <div class="col-sm-9"><input id="cookie-path" name="cookie_path"  value="{{ request.form['cookie_path'] or dl_configs['cookie_path'] }}" class="form-control" /></div>
+            </div>
+            <div class="row mt-2">
+                <div class="col-sm-3 d-flex"><label for="download-path" class="form-label align-self-center">Download path: </label></div>
+                <div class="col-sm-9"><input id="download-path" name="download_path" value="{{ request.form['download_path'] or dl_configs['download_path'] }}" class="form-control" /></div>
+            </div>  
+            <div class="row mt-2">
+                <div class="col-sm-3 d-flex"><label for="local-videos" class="form-label align-self-center">Local file path: </label></div>
+                <div class="col-sm-9"><input id="local-videos" name="local_videos" value="{{ request.form['local_videos'] or dl_configs['local_videos'] }}" class="form-control" /></div>
+            </div>
+            <div class="mt-2" style="text-align: right">
+                <button type="submit" class="btn btn-primary">Apply</button>
+            </div>
+        </form>
 
-    {% if is_downloading %}
-        <p><span style="color: #86473F;">Downloading!</span> <a href="{{ url_for('management.stop_tasks') }}" style="color: #AB3B3A; font-weight: bold;">STOP</a></p>
-    {% else %}
-        <p><span style="color: #20604F;">Free</span> <a href="{{ url_for('management.trigger_download') }}" style="color: #268785; font-weight: bold;">START</a></p>
-    {% endif %}
+        <div class="mt-4 border rounded-2 p-2" style="background-color: #ffcccc; position: relative;">
+            <div style="position: absolute; left: 2%; top: 0%; transform: translate(0, -50%); padding: 0.1em 0.3em; font-size: 0.8em;" class="border border-secondary rounded-pill bg-light text-secondary">Danger zone</div>
+            <div class="mt-3 px-2">
+                <div class="mb-2">
+                    <button id="scan-local" type="button" class="btn btn-primary">Scan local files</button>
+                </div>
+                <div class="mb-2">
+                    {% if is_downloading %}
+                        <button id="stop-dl" type="button" class="btn btn-danger">Stop Downloader</button> <span class="ps-2">Downloader is running, press to stop. </span>
+                    {% else %}
+                        <button id="start-dl" type="button" class="btn btn-success">Start Downloader</button> <span class="ps-2">Downloader is free, press to start. </span>
+                    {% endif %}
+                </div>
+            </div>
+        </div>
 
+    </div>
 
+    <div class="col-sm-1"></div>
+</div>
+
+<script>
+    'use strict';
+    $('#scan-local').on('click', function () {
+        location.assign("{{ url_for('management.scan_local') }}");
+    });
+    $('#stop-dl').on('click', function () {
+        location.assign("{{ url_for('management.stop_tasks') }}");
+    })
+    $('#start-dl').on('click', function () {
+        location.assign("{{ url_for('management.trigger_download') }}");
+    })
+</script>
 {% endblock %}
