--- a/vtbarchiver/templates/base.html
+++ b/vtbarchiver/templates/base.html
@@ -6,7 +6,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <link href="https://unpkg.com/@yaireo/tagify/dist/tagify.css" rel="stylesheet" type="text/css" />
         <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}" />
-        <link rel="stylesheet" href="https://at.alicdn.com/t/font_2511755_huz39bcog79.css" />
+        <link rel="stylesheet" href="https://at.alicdn.com/t/font_2511755_wgxf6czhap.css" />
         <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
         <script src="{{ url_for('static', filename='scripts/misc.js') }}"></script>
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -18,7 +18,7 @@
         <div class="container-fluid">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link text-dark" href="#side-bar-nav" style="font-size: 1.2em;" data-bs-toggle="offcanvas"><i class="iconfont icon-nav-list"></i></a>
+                    <a class="nav-link text-dark" href="#side-bar-nav" style="font-size: 1.2em;" data-bs-toggle="offcanvas"><i class="iconfont icon-menu"></i></a>
                 </li>
                 
                 <li class="nav-item text-dark">
@@ -42,10 +42,10 @@
         </div>
         <div class="offcanvas-body">
             <div class="list-group">
-                <a href="{{ url_for('channels.channels') }}" class="list-group-item list-group-item-action border-0 side-bar-items">Channels</a>
-                <a href="{{ url_for('videos.videos') }}" class="list-group-item list-group-item-action border-0 side-bar-items">Videos</a>
+                <a href="{{ url_for('channels.channels') }}" class="list-group-item list-group-item-action border-0 side-bar-items"><i class="iconfont icon-account me-2"></i> Channels</a>
+                <a href="{{ url_for('videos.videos') }}" class="list-group-item list-group-item-action border-0 side-bar-items"><i class="iconfont icon-playcircle me-2"></i> Videos</a>
                 {% if g.user %}
-                    <a href="{{ url_for('management.settings') }}" class="list-group-item list-group-item-action border-0 side-bar-items">Settings</a>
+                    <a href="{{ url_for('management.settings') }}" class="list-group-item list-group-item-action border-0 side-bar-items"><i class="iconfont icon-terminal me-2"></i> Settings</a>
                 {% endif %}
             </div>
         </div>
