--- a/vtbarchiver/templates/channels/single_channel.html
+++ b/vtbarchiver/templates/channels/single_channel.html
@@ -68,18 +68,18 @@
         
         <ul class="pagination justify-content-center mt-5">
             <li class="page-item"><a class="page-link" href="{{ url_for('channels.single_channel', channel_id=channel_info['channel_id'], page=1) }}">First</a></li>
-            {% if current_page > 1 %}
-                <li class="page-item"><a class="page-link" href="{{ url_for('channels.single_channel', channel_id=channel_info['channel_id'], page=current_page-1) }}">Prev</a></li>
+            {% if pagination.active_page > 1 %}
+                <li class="page-item"><a class="page-link" href="{{ pagination.links[pagination.list.index(pagination.active_page)-1] }}">Prev</a></li>
             {% else %}
                 <li class="page-item disabled"><a class="page-link" href="#">Prev</a></li>
             {% endif %}
 
-            {% for i in pagination_list %}
-                <li id="page-tag-{{ i }}" class="page-item"><a class="page-link" href="{{ url_for('channels.single_channel', channel_id=channel_info['channel_id'], page=i) }}">{{ i }}</a></li>
+            {% for i in range(pagination.list|length) %}
+                <li class="page-item {% if pagination.active_page==pagination.list[i] %}active{% endif %}"><a class="page-link" href="{{ pagination.links[i] }}">{{ pagination.list[i] }}</a></li>
             {% endfor %}
 
-            {% if current_page != page_num %}
-                <li class="page-item"><a class="page-link" href="{{ url_for('channels.single_channel', channel_id=channel_info['channel_id'], page=current_page+1) }}">Next</a></li>
+            {% if pagination.active_page != page_num %}
+                <li class="page-item"><a class="page-link" href="{{ pagination.links[pagination.list.index(pagination.active_page)+1] }}">Next</a></li>
             {% else %}
                 <li class="page-item disabled"><a class="page-link" href="#">Next</a></l>
             {% endif %}
@@ -159,7 +159,6 @@
 </div>
 {% endif %}
 
-<script>set_page_active({{ current_page }})</script>
 <script src="{{ url_for('static', filename='scripts/single_channel.js') }}"></script>
 <script>
     let delete_channel_btn = $('#delete-channel-btn');
