--- a/vtbarchiver/templates/videos/videos.html
+++ b/vtbarchiver/templates/videos/videos.html
@@ -4,13 +4,55 @@
 
 
 {% block content %}
+<script src="https://unpkg.com/@yaireo/tagify"></script>
+<script src="https://unpkg.com/@yaireo/tagify/dist/tagify.polyfills.min.js"></script>
+<script type="text/javascript" src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
+<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
+
+
+
 <div class="row">
     <div class="col-sm-1"></div>
 
     <div class="col-sm-10">
 
         <div>
-            <h2 class="mb-3">Videos</h2>
+            <div class="d-flex">
+                <div class="align-self-center">
+                    <h2 class="mb-3">Videos</h2>
+                </div>
+                <div class="align-self-center flex-grow-1" style="text-align: right;">
+                    <a href="#search-area" data-bs-toggle="collapse" data-bs-target="#search-area" class="text-secondary" style="text-decoration: none;"><i class="iconfont icon-search"></i>Search</a>
+                </div>
+            </div>
+            <div id="search-area" class="collapse p-2 rounded-bottom" style="background-color: #ebebeb;">
+                <div class="mt-2"><input id="talent-search" placeholder="Talents" /></div>
+                <div class="mt-2"><input id="tag-search" placeholder="Stream type" /></div>
+                <input type="text" class="form-control mt-2" name="datefilter" value="" placeholder="Date filter"/>
+                <form id="search-form" action="{{ url_for('videos.search_video') }}" method="get">
+                    <input id="search-keys" name="search-keys" placeholder="Search titles" class="form-control mt-2"/>
+                    <input type="hidden" id="parsed-talents" name="talents" />
+                    <input type="hidden" id="parsed-tags" name="tags" />
+                    <input type="hidden" id="page" name="page" />
+                    <input type="hidden" id="time-range" name="time-range" />
+                    <input type="hidden" id="time-descending" name="time-descending" value="false" />
+                </form>
+                <div class="mt-2 d-flex">
+                    <div class="align-self-center ms-2">
+                        <a href="#" id="descending-switch" class="text-secondary" style="text-decoration: none; font-size: 0.8em;"><i class="iconfont icon-rank"></i> Default</a>
+                    </div>
+                    <div class="flex-grow-1" style="text-align: right;">
+                        <button type="submit" class="btn btn-primary" form="search-form">Search</button>
+                    </div>
+                </div>
+            </div>
+            {% if not videos_on_page %}
+            <div class="alert alert-warning">There is no matched result. </div>
+            {% else %}
+            {% if search_params_call_back %}
+            
+            {% endif %}
             {% for single_video in videos_on_page %}
                 <div class="bg-light shadow-sm mx-auto my-2 border rounded-2" onclick="location.assign('{{ url_for('videos.single_video', video_id=single_video['video_id']) }}')" style="cursor: pointer;">
                     <div class="row mx-0">
@@ -39,27 +81,28 @@
                     </div>
                 </div>
             {% endfor %}
+            {% endif %}
         </div>
         
         <ul class="pagination justify-content-center mt-5">
-            <li class="page-item"><a class="page-link" href="{{ url_for('videos.videos', page=1) }}">First</a></li>
-            {% if current_page > 1 %}
-                <li class="page-item"><a class="page-link" href="{{ url_for('videos.videos', page=current_page-1) }}">Prev</a></li>
+            <li class="page-item"><a class="page-link" href="{{ pagination.links[0] }}">First</a></li>
+            {% if pagination.active_page > 1 %}
+                <li class="page-item"><a class="page-link" href="{{ pagination.links[pagination.list.index(pagination.active_page)-1] }}">Prev</a></li>
             {% else %}
                 <li class="page-item disabled"><a class="page-link" href="#">Prev</a></li>
             {% endif %}
 
-            {% for i in pagination_list %}
-                <li id="page-tag-{{ i }}" class="page-item"><a class="page-link" href="{{ url_for('videos.videos', page=i) }}">{{ i }}</a></li>
+            {% for i in range(pagination.list|length) %}
+                <li class="page-item {% if pagination.active_page==pagination.list[i] %}active{% endif %}"><a class="page-link" href="{{ pagination.links[i] }}">{{ pagination.list[i] }}</a></li>
             {% endfor %}
 
-            {% if current_page != page_num %}
-                <li class="page-item"><a class="page-link" href="{{ url_for('videos.videos', page=current_page+1) }}">Next</a></li>
+            {% if pagination.active_page != page_num %}
+                <li class="page-item"><a class="page-link" href="{{ pagination.links[pagination.list.index(pagination.active_page)+1] }}">Next</a></li>
             {% else %}
                 <li class="page-item disabled"><a class="page-link" href="#">Next</a></l>
             {% endif %}
                 
-            <li class="page-item"><a class="page-link" href="{{ url_for('videos.videos', page=page_num) }}">Last</a></li>
+            <li class="page-item"><a class="page-link" href="{{ pagination.links[-1] }}">Last</a></li>
         </ul>
 
     </div>
@@ -107,6 +150,5 @@
         </tr>
     </table>
 -->
-<script>set_page_active({{ current_page }})</script>
-<script src="{{ url_for('static', filename='scripts/single_channel.js') }}"></script>
+<script src="{{ url_for('static', filename='scripts/videos.js') }}"></script>
 {% endblock %}
