--- a/vtbarchiver/templates/home/index.html
+++ b/vtbarchiver/templates/home/index.html
@@ -2,13 +2,17 @@
 
 {% block title %}Home{% endblock %}
 
-{% block content %}
+{% block head_links %}
 <style>
     #about a {
         text-decoration: underline dotted;
         color: #6e757c;
     }
 </style>
+{% endblock %}
+
+{% block content %}
+
 <div class="row">
     <div class="col-sm-1"></div>
 
