--- a/vtbarchiver/templates/management/settings.html
+++ b/vtbarchiver/templates/management/settings.html
@@ -59,7 +59,9 @@
 
     <div class="col-sm-1"></div>
 </div>
+{% endblock %}
 
+{% block end_body %}
 <script>
     'use strict';
     $('#scan-local').on('click', function () {
