--- a/vtbarchiver/templates/base.html
+++ b/vtbarchiver/templates/base.html
@@ -10,11 +10,12 @@
         <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
         <script src="{{ url_for('static', filename='scripts/misc.js') }}"></script>
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        {% block head_links %}{% endblock %}
     </head>
 
     <body>
     
-    <nav class="navbar navbar-expand-sm fixed-top" style="background-color: #e8e8e8;">
+    <nav class="navbar navbar-expand fixed-top" style="background-color: #e8e8e8;">
         <div class="container-fluid">
             <ul class="navbar-nav">
                 <li class="nav-item">
@@ -73,6 +74,7 @@
         </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     </div>
+    {% block end_body %}{% endblock %}
     </body>
 </html>
 
