--- a/vtbarchiver/templates/channels/single_channel.html
+++ b/vtbarchiver/templates/channels/single_channel.html
@@ -2,6 +2,10 @@
 
 {% block title %}{{ channel_info['channel_name'] }}{% endblock %}
 
+{% block head_links %}
+<script src="https://cdn.jsdelivr.net/npm/chart.js@3.7.1/dist/chart.min.js"></script>
+{% endblock %}
+
 {% block content %}
 <div class="row">
     <div class="col-sm-1"></div>
@@ -38,54 +42,101 @@
         </div>
         
         <div class="mt-5">
-            {% for single_video in videos_on_page %}
-                <div class="bg-light shadow-sm mx-auto my-2 border rounded-2" onclick="location.assign('{{ url_for('videos.single_video', video_id=single_video['video_id']) }}')" style="cursor: pointer;">
-                    <div class="row mx-0">
-                        <div class="col-sm-3 border-end px-0">
-                            <div class="mx-auto d-flex" style="text-align: center; align-items: center; height: 100%;">
-                                <img src="{{ single_video['thumb_url'] }}" style="width: 100%; display: block;" alt="Thumb" class="border-0 rounded-2"/>
-                            </div>
-                        </div>
-                        <div class="col-sm-9">
-                            <div class="d-flex px-2" style="height: 100%;">
-                                <div class="align-self-center pe-2">
-                                    <div class="my-2">{{ single_video['title'] }}</div>
-                                    <div class="my-2 text-secondary video-upload-date" style="font-size: 0.9em;">{{ single_video['upload_date'] }}</div>
-                                    <div class="my-2 text-secondary video-duration" style="font-size: 0.9em;">{{ single_video['duration'] }}</div>
-                                </div>
-                                <div class="align-self-start flex-grow-1" style="text-align: right;">
-                                    <span class="text-secondary" style="font-size: 0.8em;">{{ single_video['upload_idx'] }}</span><br />
-                                    {% if single_video['local_id'] %}
-                                        <span><i class="iconfont icon-archive text-success"></i></span>
-                                    {% endif %}
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            {% endfor %}
+            <ul class="nav nav-tabs justify-content-center">
+                <li class="nav-item">
+                  <a class="nav-link active" data-bs-toggle="tab" href="#channel-videos">Videos</a>
+                </li>
+                <li class="nav-item">
+                  <a id="stats-tab" class="nav-link" data-bs-toggle="tab" href="#channel-stats">Statistics</a>
+                </li>
+            </ul>
         </div>
         
-        <ul class="pagination justify-content-center mt-5">
-            <li class="page-item"><a class="page-link" href="{{ url_for('channels.single_channel', channel_id=channel_info['channel_id'], page=1) }}">First</a></li>
-            {% if pagination.active_page > 1 %}
-                <li class="page-item"><a class="page-link" href="{{ pagination.links[pagination.list.index(pagination.active_page)-1] }}">Prev</a></li>
-            {% else %}
-                <li class="page-item disabled"><a class="page-link" href="#">Prev</a></li>
-            {% endif %}
-
-            {% for i in range(pagination.list|length) %}
-                <li class="page-item {% if pagination.active_page==pagination.list[i] %}active{% endif %}"><a class="page-link" href="{{ pagination.links[i] }}">{{ pagination.list[i] }}</a></li>
-            {% endfor %}
-
-            {% if pagination.active_page != page_num %}
-                <li class="page-item"><a class="page-link" href="{{ pagination.links[pagination.list.index(pagination.active_page)+1] }}">Next</a></li>
-            {% else %}
-                <li class="page-item disabled"><a class="page-link" href="#">Next</a></l>
-            {% endif %}
+        <div class="tab-content">
+            <div class="tab-pane container active" id="channel-videos">
+                <div class="mt-3">
+                    {% for single_video in videos_on_page %}
+                        <div class="bg-light shadow-sm mx-auto my-2 border rounded-2" onclick="location.assign('{{ url_for('videos.single_video', video_id=single_video['video_id']) }}')" style="cursor: pointer;">
+                            <div class="row mx-0">
+                                <div class="col-sm-3 border-end px-0">
+                                    <div class="mx-auto d-flex" style="text-align: center; align-items: center; height: 100%;">
+                                        <img src="{{ single_video['thumb_url'] }}" style="width: 100%; display: block;" alt="Thumb" class="border-0 rounded-2"/>
+                                    </div>
+                                </div>
+                                <div class="col-sm-9">
+                                    <div class="d-flex px-2" style="height: 100%;">
+                                        <div class="align-self-center pe-2">
+                                            <div class="my-2">{{ single_video['title'] }}</div>
+                                            <div class="my-2 text-secondary video-upload-date" style="font-size: 0.9em;">{{ single_video['upload_date'] }}</div>
+                                            <div class="my-2 text-secondary video-duration" style="font-size: 0.9em;">{{ single_video['duration'] }}</div>
+                                        </div>
+                                        <div class="align-self-start flex-grow-1" style="text-align: right;">
+                                            <span class="text-secondary" style="font-size: 0.8em;">{{ single_video['upload_idx'] }}</span><br />
+                                            {% if single_video['local_id'] %}
+                                                <span><i class="iconfont icon-archive text-success"></i></span>
+                                            {% endif %}
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    {% endfor %}
+                </div>
                 
-            <li class="page-item"><a class="page-link" href="{{ url_for('channels.single_channel', channel_id=channel_info['channel_id'], page=page_num) }}">Last</a></li>
-        </ul>
+                <ul class="pagination justify-content-center mt-5">
+                    <li class="page-item"><a class="page-link" href="{{ url_for('channels.single_channel', channel_id=channel_info['channel_id'], page=1) }}">&lt;&lt;</a></li>
+                    {% if pagination.active_page > 1 %}
+                        <li class="page-item"><a class="page-link" href="{{ pagination.links[pagination.list.index(pagination.active_page)-1] }}">&lt;</a></li>
+                    {% else %}
+                        <li class="page-item disabled"><a class="page-link" href="#">&lt;</a></li>
+                    {% endif %}
+
+                    {% for i in range(pagination.list|length) %}
+                        <li class="page-item {% if pagination.active_page==pagination.list[i] %}active{% endif %}"><a class="page-link" href="{{ pagination.links[i] }}">{{ pagination.list[i] }}</a></li>
+                    {% endfor %}
+
+                    {% if pagination.active_page != page_num %}
+                        <li class="page-item"><a class="page-link" href="{{ pagination.links[pagination.list.index(pagination.active_page)+1] }}">&gt;</a></li>
+                    {% else %}
+                        <li class="page-item disabled"><a class="page-link" href="#">&gt;</a></l>
+                    {% endif %}
+                        
+                    <li class="page-item"><a class="page-link" href="{{ url_for('channels.single_channel', channel_id=channel_info['channel_id'], page=page_num) }}">&gt;&gt;</a></li>
+                </ul>
+            </div>
+
+            <div class="tab-pane container fade" id="channel-stats">
+                <div class="mt-3">
+                    <div class="d-flex justify-content-end">
+                        <div class="btn-group btn-group-sm">
+                            <button id="stats-fit" type="button" class="btn btn-outline-secondary stats-filter">Fit</button>
+                            <button id="stats-30" type="button" class="btn btn-outline-secondary stats-filter">30 Days</button>
+                            <button id="stats-90" type="button" class="btn btn-outline-secondary stats-filter">90 Days</button>
+                            <button id="stats-365" type="button" class="btn btn-outline-secondary stats-filter">365 Days</button>
+                        </div>
+                    </div>
+                <div class="mt-3">
+                    <div class="chart-title">Collaborations</div>
+                    <canvas id="talent-chart" width="400"></canvas>
+                </div>
+                <div class="mt-5">
+                    <div class="chart-title">Stream Types</div>
+                    <canvas id="tag-chart" width="400" height="400"></canvas>
+                </div>
+                <div class="mt-5">
+                    <div class="chart-title">Number of Videos Uploaded per Week</div>
+                    <canvas id="num-stats" width="400" height="200"></canvas>
+                </div>
+                <div class="mt-5">
+                    <div class="chart-title">Total Length of Videos Uploaded per Week (Hours)</div>
+                    <canvas id="duration-stats" width="400" height="200"></canvas>
+                </div>
+                <div class="mt-5 mb-5">
+                    <div class="chart-title">Video Lengths Distribution (Minutes)</div>
+                    <canvas id="duration-distr" width="400" height="200"></canvas>
+                </div>
+            </div>
+        </div>
 
     </div>
 
@@ -159,14 +210,17 @@
 </div>
 {% endif %}
 
+{% endblock %} 
+
+
+{% block end_body %}
 <script src="{{ url_for('static', filename='scripts/single_channel.js') }}"></script>
 <script>
     let delete_channel_btn = $('#delete-channel-btn');
     delete_channel_btn.on('click', function () {
         if (confirm('Are you sure you want to delete this channel? ')) {
-        location.assign('{{ url_for("channels.delete_channel", channel_id=channel_info["channel_id"]) }}')
-    }
-});
+        location.assign('{{ url_for("channels.delete_channel", channel_id=channel_info["channel_id"]) }}');
+        }
+    });
 </script>
-
-{% endblock %} 
+{% endblock %}
