--- a/vtbarchiver/templates/channels/single_channel.html
+++ b/vtbarchiver/templates/channels/single_channel.html
@@ -4,6 +4,12 @@
 
 {% block head_links %}
 <script src="https://cdn.jsdelivr.net/npm/chart.js@3.7.1/dist/chart.min.js"></script>
+<script type="text/javascript" src="https://cdn.jsdelivr.net/jquery/latest/jquery.min.js"></script>
+<script type="text/javascript" src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
+<script src="https://unpkg.com/@yaireo/tagify"></script>
+<script src="https://unpkg.com/@yaireo/tagify/dist/tagify.polyfills.min.js"></script>
+<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
 {% endblock %}
 
 {% block content %}
@@ -31,17 +37,12 @@
                                 <div class="my-2 text-secondary">Download checkpoint: {{ channel_info['checkpoint_idx'] }}</div>
                             {% endif %}
                         </div>
-                        {% if g.user %}
-                            <div class="align-self-start flex-grow-1" style="text-align: right;">
-                                <a data-bs-toggle="modal" data-bs-target="#channel-setting-modal" href="#channel-setting-modal" style="text-decoration: none;"><i class="iconfont icon-set text-secondary" style="font-size: 1.5em;"></i></a>
-                            </div>
-                        {% endif %}
                     </div>
                 </div>
             </div>
         </div>
         
-        <!-- video/stats switcher-->
+        <!-- video/stats/management switcher-->
         <div class="mt-5">
             <ul class="nav nav-tabs justify-content-center">
                 <li class="nav-item">
@@ -50,6 +51,11 @@
                 <li class="nav-item">
                   <a id="stats-tab" class="nav-link" data-bs-toggle="tab" href="#channel-stats">Statistics</a>
                 </li>
+                {% if g.user %}
+                <li class="nav-item">
+                  <a class="nav-link" data-bs-toggle="tab" href="#channel-mgn">Management</a>
+                </li>
+                {% endif %}
             </ul>
         </div>
         
@@ -119,50 +125,34 @@
                             <button id="stats-365" type="button" class="btn btn-outline-secondary stats-filter">365 Days</button>
                         </div>
                     </div>
-                <div class="mt-3">
-                    <div class="chart-title">Collaborations</div>
-                    <div id="talent-chart-legends" class="chart-legend"></div>
-                    <canvas id="talent-chart" width="400"></canvas>
-                </div>
-                <div class="mt-5">
-                    <div class="chart-title">Stream Types</div>
-                    <div id="tag-chart-legends" class="chart-legend"></div>
-                    <canvas id="tag-chart" width="400" height="400"></canvas>
-                </div>
-                <div class="mt-5">
-                    <div class="chart-title">Number of Videos Uploaded per Week</div>
-                    <canvas id="num-stats" width="400" height="200"></canvas>
-                </div>
-                <div class="mt-5">
-                    <div class="chart-title">Total Length of Videos Uploaded per Week (Hours)</div>
-                    <canvas id="duration-stats" width="400" height="200"></canvas>
-                </div>
-                <div class="mt-5 mb-5">
-                    <div class="chart-title">Video Lengths Distribution (Minutes)</div>
-                    <canvas id="duration-distr" width="400" height="200"></canvas>
+                    <div class="mt-3">
+                        <div class="chart-title">Collaborations</div>
+                        <div id="talent-chart-legends" class="chart-legend"></div>
+                        <canvas id="talent-chart" width="400"></canvas>
+                    </div>
+                    <div class="mt-5">
+                        <div class="chart-title">Stream Types</div>
+                        <div id="tag-chart-legends" class="chart-legend"></div>
+                        <canvas id="tag-chart" width="400" height="400"></canvas>
+                    </div>
+                    <div class="mt-5">
+                        <div class="chart-title">Number of Videos Uploaded per Week</div>
+                        <canvas id="num-stats" width="400" height="200"></canvas>
+                    </div>
+                    <div class="mt-5">
+                        <div class="chart-title">Total Length of Videos Uploaded per Week (Hours)</div>
+                        <canvas id="duration-stats" width="400" height="200"></canvas>
+                    </div>
+                    <div class="mt-5 mb-5">
+                        <div class="chart-title">Video Lengths Distribution (Minutes)</div>
+                        <canvas id="duration-distr" width="400" height="200"></canvas>
+                    </div>
                 </div>
             </div>
-        </div>
-
-    </div>
-
-
-    <div class="col-sm-1"></div>
-
-</div>
-
-{% if g.user %}
-<!-- Settings modal box-->
-<div class="modal fade" id="channel-setting-modal">
-    <div class="modal-dialog">
-        <div class="modal-content">
-
-            <div class="modal-header">
-                <h4 class="modal-title">Update Channel</h4>
-                <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-            </div>
-
-            <div class="modal-body">
+            
+            {% if g.user %}
+            <!-- Channel management -->
+            <div class="tab-pane container fade" id="channel-mgn">
                 <div>
                     {% for message in get_flashed_messages() %}
                         <div class="alert alert-info">
@@ -172,7 +162,11 @@
                     {% endfor %}
                 </div>
 
-                <div class="mx-5 pb-3 border-bottom">
+                <!-- download index -->
+                <div class="p-3 mt-3 border rounded-2 setting-block">
+                    <div class="block-border-label">
+                        Download Index
+                    </div>
                     <form method="post" action="{{ url_for('channels.edit_checkpoint', channel_id=channel_info['channel_id']) }}">
                         <div class="mb-3 mt-3">
                             <label for="checkpoint_idx" class="form-label">New upload index: </label>
@@ -192,9 +186,13 @@
                     </form>
                 </div>
 
-                <div class="mx-5 pb-3">
+                <!-- talent name -->
+                <div class="p-3 mt-4 border rounded-2 setting-block">
+                    <div class="block-border-label">
+                        Talent name
+                    </div>
                     <form method="post" action="{{ url_for('channels.edit_talent', channel_id=channel_info['channel_id']) }}">
-                        <div class="mb-3 mt-3">
+                        <div class="my-3">
                             <label for="talent_name" class="form-label">New talent name: </label>
                             <input class="form-control" id="talent_name" type="text" name="talent_name" />
                         </div>
@@ -204,17 +202,77 @@
                         </div>
                     </form>
                 </div>
-            </div>
 
-            <div class="modal-footer">
-                <button type="button" class="btn btn-danger" id="delete-channel-btn">Delete Channel</button>
-                <button type="button" class="btn btn-warning" data-bs-dismiss="modal">Cancel</button>
-            </div>
+                <!-- add video manually -->
+                <div class="p-3 mt-4 border rounded-2 setting-block">
+                    <div class="block-border-label">
+                        Add video manually
+                    </div>
+                    <form id="new-video-form" method="post">
+                        <div class="mb-3 mt-3">
+                            <p id="add-video-warning"></p>
+                            <div class="d-flex">
+                                <div>
+                                    <label class="form-label">Video ID: </label>
+                                </div>
+                                <div class="flex-grow-1 text-end">
+                                    <input type="checkbox" class="form-check-input" id="unarchived-content-check"/>
+                                    <label class="form-label" for="unarchived-content-check">Unarchived content</label>
+                                </div>
+                            </div>
+                            <input class="form-control" type="text" name="new-video-id" />
+                            <div class="d-none" id="unarchived-field">
+                                <div class="my-3">
+                                    <label class="form-label" for="new-video-title">Title</label>
+                                    <input class="form-control" type="text" name="new-video-title" id="new-video-title" />
+                                </div>
+                                <div class="my-3">
+                                    <label class="form-label" for="new-video-date-picker">Upload time</label>
+                                    <input class="form-control" type="text" name="new-video-date-picker" id="new-video-date-picker">
+                                    <input type="hidden" name="new-video-date" id="new-video-date">
+                                </div>
+                                <div class="my-3">
+                                    <label class="form-label" for="new-video-duration">Video duration</label>
+                                    <input class="form-control" type="text" name="new-video-duration" id="new-video-duration" placeholder="hh:mm:ss">
+                                </div>
+                                <div class="my-3">
+                                    <label class="form-label" for="new-video-thumb">Thumbnail url</label>
+                                    <input class="form-control" type="text" name="new-video-thumb" id="new-video-thumb">
+                                </div>
+                            </div>
+                            <div class="my-3">
+                                <label class="form-label" for="new-video-talents">Talents</label>
+                                <input type="text" name="new-video-talents" id="new-video-talents">
+                                <input type="hidden" name="parsed-video-talents" id="parsed-video-talents">
+                            </div>
+                            <div class="my-3">
+                                <label class="form-label" for="new-video-types">Tags</label>
+                                <input type="text" name="new-video-types" id="new-video-types">
+                                <input type="hidden" name="parsed-video-types" id="parsed-video-types">
+                            </div>
+                        </div>
+                        <div style="text-align: right;">
+                            <button type="button" class="btn btn-success" id="add-video-btn">Add video</button>
+                        </div>
+                    </form>
+                </div>
 
+                <div class="my-4 text-end border rounded-2 p-3 setting-block" style="background-color: #ffcccc;">
+                    <div class="block-border-label border rounded-pill">
+                        Danger zone
+                    </div>
+                    <button type="button" class="btn btn-danger" id="delete-channel-btn">Delete Channel</button>
+                </div>
+            </div>
+            {% endif %}
         </div>
+
     </div>
+
+
+    <div class="col-sm-1"></div>
+
 </div>
-{% endif %}
 
 {% endblock %} 
 
