--- a/vtbarchiver/templates/videos/single_video.html
+++ b/vtbarchiver/templates/videos/single_video.html
@@ -3,8 +3,8 @@
 {% block title %}{{ video_info['title'] }}{% endblock %}
 
 {% block head_links %}
-<script src="https://unpkg.com/@yaireo/tagify"></script>
-<script src="https://unpkg.com/@yaireo/tagify/dist/tagify.polyfills.min.js"></script>
+    <script src="https://unpkg.com/@yaireo/tagify"></script>
+    <script src="https://unpkg.com/@yaireo/tagify/dist/tagify.polyfills.min.js"></script>
 {% endblock %}
 
 {% block content %}
@@ -13,12 +13,14 @@
     <div class="col-sm-12">
         <div class="mt-4 row">
             <div class="col-sm-6">
+                <!-- thumb nail -->
                 <div class="align-self-center me-2" style="text-align: center; position: relative;">
                     <img src="{{  video_info['video_thumb'] }}" alt="Video thumbnail" style="width: 100%;" />
                     <div class="duration-stamp video-duration">{{ video_info['duration'] }}</div>
                 </div>
             </div>
             <div class="col-sm-6 d-flex justify-content-center">
+                <!-- video info -->
                 <div class="align-self-center" style="width: 100%;">
                     <div style="text-align: center;">
                         <h4>{{ video_info['title'] }}</h4>
@@ -27,7 +29,17 @@
                     <div class="mt-3">
                         <div class="d-flex justify-content-center">
                             <div class="d-flex justify-content-center" style="width: 45%;">
-                                <div class="align-self-center" style="text-align: center;"><a class="text-dark" href="https://www.youtube.com/watch?v={{ video_info['video_id'] }}" target="_blank">{{ video_info['video_id'] }}</a></div>
+                                <div class="align-self-center" style="text-align: center;">
+                                    {% if video_info['video_id'][:2] == '__' and video_info['video_id'][-2:] == "__" %}
+                                        {% if g.user %}
+                                            {{ video_info['video_id'] }}
+                                        {% else %}
+                                            Unarchived
+                                        {% endif %}
+                                    {% else %}
+                                    <a class="text-dark" href="https://www.youtube.com/watch?v={{ video_info['video_id'] }}" target="_blank">{{ video_info['video_id'] }}</a>
+                                    {% endif %}
+                                </div>
                             </div>
                             <div class="d-flex justify-content-center" style="width: 45%;">
                                 <div class="video-upload-date align-self-center" style="text-align: center;">{{ video_info['upload_date'] }}</div>
@@ -43,6 +55,7 @@
                             </div>
                         </div>
                     </div>
+                    <!-- play/download -->
                     {% if video_relpath %}
                         <div class="mt-3" style="text-align: center;">
                             <button type="button" class="btn btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#archived-video-modal"><i class="iconfont icon-play"></i> Play archived</button>
@@ -52,6 +65,7 @@
             </div>
         </div>
         <div class="mt-4">
+        <!-- talents display -->
             <div class="text-secondary" style="font-size: 1.1em;">Talents: </div>
             <div class="mt-2">
                 {% for single_talent_name in participators.split(',') %}
@@ -64,6 +78,7 @@
                 {% endif %}
             </div>
         </div> 
+        <!-- type display -->
         <div class="mt-4">
             <div class="text-secondary" style="font-size: 1.1em;">Stream type: </div>
             <div class="mt-2">
@@ -82,6 +97,7 @@
 
 </div>
 
+<!-- play modal -->
 {% if video_relpath %}
     <div class="modal" id="archived-video-modal">
         <div class="modal-dialog modal-lg modal-dialog-centered modal-fullscreen-md-down">
@@ -105,6 +121,7 @@
 {% endif %}
 
 
+<!-- edit tags -->
 {% if g.user %}
     <div class="modal" id="edit-talent-modal">
         <div class="modal-dialog modal-lg">
